--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ output*
 dummy*
 SpeechCommands
 speech_commands_v0.02.tar.gz
+speech_commands_v0.01.tar.gz
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
