--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ dummy*
 SpeechCommands
 speech_commands_v0.02.tar.gz
 speech_commands_v0.01.tar.gz
-
+models/wandb
+models/data
+*/core
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -20,7 +22,7 @@ develop-eggs/
 dist/
 downloads/
 eggs/
-.eggs/
+.eggs/e
 lib/
 lib64/
 parts/
